# mctracker

./: CMakeLists.txt  LICENSE  README.md
configs/: config.yaml  homography_001.yaml  homography_006.yaml  kalman_param.yaml
src/apps/: CMakeLists.txt
src/apps/src/: homography_app.cpp  multi_camera_tracker.cpp
src/config/: CMakeLists.txt
src/config/include/: camera_param.h  configmanager.h  detector_param.h  kalman_param.h  yamlmanager.h
src/config/src/: configmanager.cpp  yamlmanager.cpp
src/homography/: CMakeLists.txt
src/homography/include/: homography.h
src/homography/src/: homography.cpp
src/object_detection/: CMakeLists.txt
src/object_detection/include/: object_detector.h
src/object_detection/src/: object_detector.cpp
src/segmentation/: CMakeLists.txt
src/segmentation/include/: bgsubtraction.h
src/segmentation/src/: bgsubtraction.cpp
src/tracker/: CMakeLists.txt
src/tracker/include/: detection.h  entity.h  hungarianAlg.h  hypothesis.h  kalman.h  lap.h  track.h  tracker.h
src/tracker/src/: hungarianAlg.cpp  hypothesis.cpp  kalman.cpp  lap.cpp  track.cpp  tracker.cpp
src/utils/: CMakeLists.txt
src/utils/include/: camera.h  camerastack.h  drawing.h  utility.h  utils.h
src/utils/src/: camera.cpp  camerastack.cpp  drawing.cpp  utility.cpp
